gcc/testsuite/rust/rustc/ui/diagnostic_namespace/deny_malformed_attribute.rs
#![deny(unknown_or_malformed_diagnostic_attributes)]

#[diagnostic::unknown_attribute]
// { dg-error "" "" { target *-*-* } .-1 }
struct Foo;

fn main() {}

